--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" href="https://i.pinimg.com/736x/65/e0/0c/65e00cc5fb7ae67ec55532fc646e1b0a.jpg">
     <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&family=Didact+Gothic&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300..700;1,300..700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="alya.css">
+    <link rel="stylesheet" href="utsallya1.css">
     <link rel="stylesheet" href="about.html">    
     <script src="utsallya1.js" defer></script>
 </head>
@@ -184,5 +184,6 @@
   </div>
 </aside>
 </body>
+
 
 </html>
